# XPLM-HTTP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  XPLM-HTTP.slnx  vcpkg-configuration.json  vcpkg.json
HTTP_SERVER/: CMakeLists.txt  HTTP_SERVER.vcxproj  HTTP_SERVER.vcxproj.filters
HTTP_SERVER/include/: HttpServer.hpp  RequestRegistry.hpp  ThreadSafeQueue.hpp
HTTP_SERVER/include/API/: BaseAPI.hpp  HttpEndPoint.hpp  HttpResponse.hpp  IBaseAPI.hpp
HTTP_SERVER/include/Commands/: ICommandExecutor.hpp
HTTP_SERVER/include/DataRefs/: DataRefType.hpp  DataRefValue.hpp  IDataProvider.hpp
HTTP_SERVER/include/Dispatcher/: SimDispatcher.hpp  SimRequest.hpp  SimResponse.hpp
HTTP_SERVER/include/Server/: HttpServer.hpp
HTTP_SERVER/include/Simulator/: CommandMode.hpp  DataRefValue.hpp  ICommandExecutor.hpp  IDataRefManager.hpp  ISimulatorInterface.hpp
HTTP_SERVER/src/: HttpServer.cpp  RequestRegistry.cpp  SimDispatcher.cpp
HTTP_SERVER/src/Server/: HttpServer.cpp
XPLM-HTTP/: CMakeLists.txt  XPLM-HTTP.vcxproj  XPLM-HTTP.vcxproj.filters
XPLM-HTTP-TEST/: CMakeLists.txt  XPLM-HTTP-TEST.vcxproj  XPLM-HTTP-TEST.vcxproj.filters
XPLM-HTTP-TEST/src/: DummyCommandManager.hpp  DummyDatarefManager.cpp  DummyDatarefManager.hpp  main.cpp
XPLM-HTTP-TEST/src/API/: DummyDataRefAPI.cpp  DummyDataRefAPI.hpp
XPLM-HTTP/resources/: config.json
XPLM-HTTP/src/: configuration.hpp  entrypoint.cpp
XPLM-HTTP/src/API/: CommandAPI.cpp  CommandAPI.hpp  DataRefAPI.cpp  DataRefAPI.hpp  PositionAPI.cpp  PositionAPI.h  PositionAPI.hpp
XPLM-HTTP/src/Commands/: CommandManager.cpp  CommandManager.hpp
XPLM-HTTP/src/Datarefs/: DataRef.cpp  DataRef.h  DataRef.hpp  DataRefManager.cpp  DataRefManager.hpp
XPLM-HTTP/www/: index.html  main.css  main.js
